LPS-24977 Source formatting